syntax = "proto3";

package geoip2;

service GeoIp {
  rpc Lookup(Ip) returns (CityReply) {}
}

message Ip { string ip = 1; }

message CityReply {
  oneof city_option { City city = 1; }
  oneof continent_option { Continent continent = 2; }
  oneof country_option { Country country = 3; }
  oneof location_option { Location location = 4; }
  oneof postal_option { Postal postal = 5; }
  oneof represented_country_option {
    RepresentedCountry represented_country = 6;
  }
  repeated Subdivision subdivisions = 7;
  oneof traits_option { Traits traits = 8; }
}

message City {
  oneof geoname_id_option { uint32 geoname_id = 1; }
  map<string, string> names = 2;
}

message Continent {
  oneof code_option { string code = 1; }
  oneof geoname_id_option { uint32 geoname_id = 2; }
  map<string, string> names = 3;
}

message Country {
  oneof geoname_id_option { uint32 geoname_id = 1; }
  oneof is_in_european_union_option { bool is_in_european_union = 2; }
  oneof iso_code_option { string iso_code = 3; }
  map<string, string> names = 4;
}

message Location {
  oneof latitude_option { double latitude = 1; }
  oneof longitude_option { double longitude = 2; }
  oneof metro_code_option { uint32 metro_code = 3; }
  oneof time_zone_option { string time_zone = 4; }
}

message Postal {
  oneof code_option { string code = 1; }
}

message RepresentedCountry {
  oneof geoname_id_option { uint32 geoname_id = 1; }
  oneof iso_code_option { string iso_code = 2; }
  map<string, string> names = 3;
}

message Subdivision {
  oneof geoname_id_option { uint32 geoname_id = 1; }
  oneof iso_code_option { string iso_code = 2; }
  map<string, string> names = 3;
}

message Traits {
  oneof is_anonymous_proxy_option { bool is_anonymous_proxy = 1; }
  oneof is_satellite_provider_option { bool is_satellite_provider = 2; }
}
